# SUAI_Algs_2sem

./: 1lab.c  1lab_v2.1.c  1lab_v2.c  2lab.c  2labVA.c  2lab_v2.c  3lab.c  3lab_v2.c  4lab.c  4labTemplate.c  5lab.c  6lab.c  7lab.c  CMakeLists.txt  MainInterface.c  README.md  lab2gen.py
libraries/: akwaena.c  akwaena.h  interface.c  interface.h  labs.h  mazesolver.c  mazesolver.h
